[gd_scene load_steps=4 format=3 uid="uid://6le4rjsq7xnf"]

[ext_resource type="Script" path="res://History/History.gd" id="1_sl1la"]
[ext_resource type="PackedScene" uid="uid://dkb7ueasgk7bq" path="res://Resources/Scenes/InventoryScreen.tscn" id="2_vr8r3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nfr6g"]

[node name="History" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sl1la")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4
split_offset = -186
dragger_visibility = 1

[node name="PanelContainer" type="PanelContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Tree" type="Tree" parent="HSplitContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_nfr6g")
columns = 2
hide_root = true
scroll_horizontal_enabled = false

[node name="InventoryPanel" type="PanelContainer" parent="HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="InventoryScreen" parent="HSplitContainer/InventoryPanel" instance=ExtResource("2_vr8r3")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4

[connection signal="cell_selected" from="HSplitContainer/PanelContainer/Tree" to="." method="_on_tree_cell_selected"]
[connection signal="item_collapsed" from="HSplitContainer/PanelContainer/Tree" to="." method="_on_tree_item_collapsed"]
[connection signal="ready" from="HSplitContainer/PanelContainer/Tree" to="HSplitContainer/PanelContainer/Tree" method="set_column_expand" binds= [1, false]]
